// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`patch collection with initial data should trigger on add, replace and remove 1`] = `
Array [
  Object {
    "model": Object {
      "id": 1,
      "type": "foo",
    },
    "newValue": Object {
      "name": "FooBar",
    },
    "oldValue": Object {
      "name": "Foo",
    },
    "patchType": 1,
  },
  Object {
    "model": Object {
      "id": 1,
      "type": "foo",
    },
    "newValue": Object {
      "age": 42,
    },
    "oldValue": Object {
      "age": undefined,
    },
    "patchType": 1,
  },
  Object {
    "model": Object {
      "id": 1,
      "type": "foo",
    },
    "newValue": Object {
      "nick": undefined,
    },
    "oldValue": Object {
      "nick": "Bar",
    },
    "patchType": 1,
  },
  Object {
    "model": Object {
      "id": 1,
      "type": "foo",
    },
    "newValue": Object {
      "height": 180,
      "name": "Bar",
    },
    "oldValue": Object {
      "height": undefined,
      "name": "FooBar",
    },
    "patchType": 1,
  },
  Object {
    "model": Object {
      "id": 1,
      "type": "foo",
    },
    "oldValue": Object {
      "__META__": Object {
        "alias": Object {},
        "fields": Array [
          "name",
          "nick",
          "age",
          "height",
        ],
        "id": 1,
        "refs": Object {},
        "type": "foo",
      },
      "age": 42,
      "height": 180,
      "name": "Bar",
      "nick": undefined,
    },
    "patchType": 2,
  },
]
`;

exports[`patch model should be able to undo 1`] = `
Array [
  Object {
    "model": Object {
      "id": -3,
      "type": "__DEFAULT_TYPE__",
    },
    "newValue": Object {
      "age": 42,
    },
    "oldValue": Object {
      "age": undefined,
    },
    "patchType": 1,
  },
  Object {
    "model": Object {
      "id": -3,
      "type": "__DEFAULT_TYPE__",
    },
    "newValue": Object {
      "height": 180,
      "name": "FooBar",
    },
    "oldValue": Object {
      "height": undefined,
      "name": "Foo",
    },
    "patchType": 1,
  },
  Object {
    "model": Object {
      "id": -3,
      "type": "__DEFAULT_TYPE__",
    },
    "newValue": Object {
      "nick": undefined,
    },
    "oldValue": Object {
      "nick": "Bar",
    },
    "patchType": 1,
  },
]
`;

exports[`patch model should ignore noop changes 1`] = `
Array [
  Object {
    "model": Object {
      "id": -4,
      "type": "__DEFAULT_TYPE__",
    },
    "newValue": Object {
      "age": 42,
    },
    "oldValue": Object {
      "age": undefined,
    },
    "patchType": 1,
  },
]
`;

exports[`patch model should trigger on add, replace and remove 1`] = `
Array [
  Object {
    "model": Object {
      "id": -1,
      "type": "__DEFAULT_TYPE__",
    },
    "newValue": Object {
      "name": "FooBar",
    },
    "oldValue": Object {
      "name": "Foo",
    },
    "patchType": 1,
  },
  Object {
    "model": Object {
      "id": -1,
      "type": "__DEFAULT_TYPE__",
    },
    "newValue": Object {
      "age": 42,
    },
    "oldValue": Object {
      "age": undefined,
    },
    "patchType": 1,
  },
  Object {
    "model": Object {
      "id": -1,
      "type": "__DEFAULT_TYPE__",
    },
    "newValue": Object {
      "nick": undefined,
    },
    "oldValue": Object {
      "nick": "Bar",
    },
    "patchType": 1,
  },
  Object {
    "model": Object {
      "id": -1,
      "type": "__DEFAULT_TYPE__",
    },
    "newValue": Object {
      "height": 180,
      "name": "Bar",
    },
    "oldValue": Object {
      "height": undefined,
      "name": "FooBar",
    },
    "patchType": 1,
  },
]
`;

exports[`patch references should trigger correct patches for ref changes 1`] = `
Array [
  Object {
    "model": Object {
      "id": 2,
      "type": "bar",
    },
    "newValue": Object {
      "__META__": Object {
        "alias": Object {},
        "fields": Array [
          "id",
        ],
        "id": 2,
        "refs": Object {},
        "type": "bar",
      },
      "id": 2,
    },
    "patchType": 0,
  },
  Object {
    "model": Object {
      "id": 1,
      "type": "foo",
    },
    "newValue": Object {
      "bar": 2,
      "id": 1,
    },
    "oldValue": Object {
      "bar": undefined,
      "id": undefined,
    },
    "patchType": 1,
  },
  Object {
    "model": Object {
      "id": 1,
      "type": "foo",
    },
    "newValue": Object {
      "__META__": Object {
        "alias": Object {},
        "fields": Array [
          "id",
        ],
        "id": 1,
        "refs": Object {
          "bar": Object {
            "model": "bar",
            "type": 0,
          },
        },
        "type": "foo",
      },
      "bar": 2,
      "id": 1,
    },
    "patchType": 0,
  },
]
`;
